--- a/art-eqi.yml
+++ b/art-eqi.yml
@@ -2,38 +2,86 @@ name: art-eqi
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.12.12=haa95532_0
-  - libffi=3.4.4=hd77b12b_0
-  - openssl=3.0.12=h2bbff1b_0
-  - pip=23.3.1=py311haa95532_0
-  - python=3.11.7=he1021f5_0
-  - setuptools=68.2.2=py311haa95532_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.41.2=py311haa95532_0
-  - xz=5.4.5=h8cc25b3_0
-  - zlib=1.2.13=h8cc25b3_0
+  - asttokens=2.0.5
+  - blas=1.0
+  - bzip2=1.0.8
+  - ca-certificates=2023.12.12
+  - colorama=0.4.6
+  - comm=0.1.2
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - executing=0.8.3
+  - intel-openmp=2023.1.0
+  - ipykernel=6.25.0
+  - ipython=8.20.0
+  - jedi=0.18.1
+  - jupyter_client=8.6.0
+  - jupyter_core=5.5.0
+  - libffi=3.4.4
+  - libsodium=1.0.18
+  - matplotlib-inline=0.1.6
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.8
+  - mkl_random=1.2.4
+  - nest-asyncio=1.5.6
+  - numpy=1.26.3
+  - numpy-base=1.26.3
+  - openssl=3.0.12
+  - parso=0.8.3
+  - pip=23.3.1
+  - platformdirs=3.10.0
+  - prompt-toolkit=3.0.43
+  - prompt_toolkit=3.0.43
+  - psutil=5.9.0
+  - pure_eval=0.2.2
+  - pygments=2.15.1
+  - python=3.11.7
+  - python-dateutil=2.8.2
+  - pywin32=305
+  - pyzmq=25.1.0
+  - setuptools=68.2.2
+  - six=1.16.0
+  - sqlite=3.41.2
+  - stack_data=0.2.0
+  - tbb=2021.8.0
+  - tk=8.6.12
+  - tornado=6.3.3
+  - traitlets=5.7.1
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wcwidth=0.2.5
+  - wheel=0.41.2
+  - xz=5.4.5
+  - zeromq=4.3.4
+  - zlib=1.2.13
   - pip:
+      - certifi==2023.11.17
+      - charset-normalizer==3.3.2
       - contourpy==1.2.0
       - cycler==0.12.1
       - fonttools==4.47.0
+      - idna==3.6
+      - jinja2==3.1.3
       - joblib==1.3.2
       - kiwisolver==1.4.5
+      - lazy-loader==0.3
+      - markupsafe==2.1.3
       - matplotlib==3.8.2
-      - numpy==1.26.3
+      - mne==1.6.1
       - packaging==23.2
       - pandas==2.1.4
       - pillow==10.2.0
+      - pooch==1.8.0
       - pyparsing==3.1.1
-      - python-dateutil==2.8.2
       - pytz==2023.3.post1
+      - pyxdf==1.16.5
+      - requests==2.31.0
       - scikit-learn==1.3.2
       - scipy==1.11.4
       - seaborn==0.13.1
-      - six==1.16.0
       - threadpoolctl==3.2.0
+      - tqdm==4.66.1
       - tzdata==2023.4
+      - urllib3==2.1.0
 prefix: C:\Users\danie\miniconda3\envs\art-eqi
