--- a/art-eqi.yml
+++ b/art-eqi.yml
@@ -1,59 +1,108 @@
 name: art-eqi
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - anyio=3.7.1
+  - argon2-cffi=23.1.0
+  - argon2-cffi-bindings=21.2.0
   - asttokens=2.0.5
+  - attrs=23.2.0
+  - beautifulsoup4=4.12.3
   - blas=1.0
+  - bleach=6.1.0
   - bzip2=1.0.8
   - ca-certificates=2023.12.12
+  - cffi=1.16.0
   - colorama=0.4.6
   - comm=0.1.2
   - debugpy=1.6.7
   - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.4
+  - exceptiongroup=1.2.0
   - executing=0.8.3
+  - idna=3.6
+  - importlib_resources=6.1.1
   - intel-openmp=2023.1.0
   - ipykernel=6.25.0
   - ipython=8.20.0
+  - ipython_genutils=0.2.0
   - jedi=0.18.1
-  - jupyter_client=8.6.0
+  - jinja2=3.1.3
+  - jsonschema=4.21.1
+  - jsonschema-specifications=2023.12.1
+  - jupyter_client=7.4.9
   - jupyter_core=5.5.0
+  - jupyter_server=1.24.0
+  - jupyterlab_pygments=0.3.0
   - libffi=3.4.4
   - libsodium=1.0.18
+  - markupsafe=2.1.3
   - matplotlib-inline=0.1.6
+  - mistune=3.0.2
   - mkl=2023.1.0
   - mkl-service=2.4.0
   - mkl_fft=1.3.8
   - mkl_random=1.2.4
+  - nbclassic=1.0.0
+  - nbclient=0.8.0
+  - nbconvert=7.14.2
+  - nbconvert-core=7.14.2
+  - nbconvert-pandoc=7.14.2
+  - nbformat=5.9.2
   - nest-asyncio=1.5.6
+  - notebook=6.5.6
+  - notebook-shim=0.2.3
   - numpy=1.26.3
   - numpy-base=1.26.3
   - openssl=3.0.12
+  - pandoc=3.1.3
+  - pandocfilters=1.5.0
   - parso=0.8.3
   - pip=23.3.1
+  - pkgutil-resolve-name=1.3.10
   - platformdirs=3.10.0
+  - prometheus_client=0.19.0
   - prompt-toolkit=3.0.43
   - prompt_toolkit=3.0.43
   - psutil=5.9.0
   - pure_eval=0.2.2
+  - pycparser=2.21
   - pygments=2.15.1
   - python=3.11.7
   - python-dateutil=2.8.2
+  - python-fastjsonschema=2.19.1
   - pywin32=305
-  - pyzmq=25.1.0
+  - pywinpty=2.0.10
+  - pyzmq=23.2.0
+  - referencing=0.32.1
+  - rpds-py=0.10.6
+  - send2trash=1.8.2
   - setuptools=68.2.2
   - six=1.16.0
+  - sniffio=1.3.0
+  - soupsieve=2.5
   - sqlite=3.41.2
   - stack_data=0.2.0
   - tbb=2021.8.0
+  - terminado=0.18.0
+  - tinycss2=1.2.1
   - tk=8.6.12
   - tornado=6.3.3
   - traitlets=5.7.1
+  - typing-extensions=4.9.0
+  - typing_extensions=4.9.0
   - vc=14.2
   - vs2015_runtime=14.27.29016
   - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - websocket-client=1.7.0
   - wheel=0.41.2
+  - winpty=0.4.3
   - xz=5.4.5
   - zeromq=4.3.4
+  - zipp=3.17.0
   - zlib=1.2.13
   - pip:
       - certifi==2023.11.17
@@ -61,12 +110,9 @@ dependencies:
       - contourpy==1.2.0
       - cycler==0.12.1
       - fonttools==4.47.0
-      - idna==3.6
-      - jinja2==3.1.3
       - joblib==1.3.2
       - kiwisolver==1.4.5
       - lazy-loader==0.3
-      - markupsafe==2.1.3
       - matplotlib==3.8.2
       - mne==1.6.1
       - packaging==23.2
@@ -74,6 +120,9 @@ dependencies:
       - pillow==10.2.0
       - pooch==1.8.0
       - pyparsing==3.1.1
+      - pyqt6==6.6.1
+      - pyqt6-qt6==6.6.1
+      - pyqt6-sip==13.6.0
       - pytz==2023.3.post1
       - pyxdf==1.16.5
       - requests==2.31.0
