--- a/art-eqi.yml
+++ b/art-eqi.yml
@@ -8,6 +8,8 @@ dependencies:
   - argon2-cffi-bindings=21.2.0
   - asttokens=2.0.5
   - attrs=23.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=2.0.0
   - beautifulsoup4=4.12.3
   - blas=1.0
   - bleach=6.1.0
@@ -57,9 +59,11 @@ dependencies:
   - numpy=1.26.3
   - numpy-base=1.26.3
   - openssl=3.0.12
+  - packaging=23.2
   - pandoc=3.1.3
   - pandocfilters=1.5.0
   - parso=0.8.3
+  - pickleshare=0.7.5
   - pip=23.3.1
   - pkgutil-resolve-name=1.3.10
   - platformdirs=3.10.0
@@ -73,6 +77,7 @@ dependencies:
   - python=3.11.7
   - python-dateutil=2.8.2
   - python-fastjsonschema=2.19.1
+  - python_abi=3.11
   - pywin32=305
   - pywinpty=2.0.10
   - pyzmq=23.2.0
@@ -113,9 +118,10 @@ dependencies:
       - joblib==1.3.2
       - kiwisolver==1.4.5
       - lazy-loader==0.3
+      - markdown-it-py==3.0.0
       - matplotlib==3.8.2
+      - mdurl==0.1.2
       - mne==1.6.1
-      - packaging==23.2
       - pandas==2.1.4
       - pillow==10.2.0
       - pooch==1.8.0
@@ -126,6 +132,7 @@ dependencies:
       - pytz==2023.3.post1
       - pyxdf==1.16.5
       - requests==2.31.0
+      - rich==13.7.0
       - scikit-learn==1.3.2
       - scipy==1.11.4
       - seaborn==0.13.1
